# nova-language

./: # 与泛型程序员协作沟通记录.txt  .gitignore  1.md  CHANGELOG.md  CHANGELOG_ALL.md  DEVELOPMENT_TOOLS.md  DEVELOPMENT_WORK_SUMMARY.md  GENERIC_FEATURES_TEST_REPORT.md  MANIFEST.in  NOVA_IDE_PLAN.md  NOVA_LANGUAGE_MANUAL.md  Nova开发工具链与最佳实践指南.md  PROJECT_SUMMARY.md  PUBLIC_BETA_PLAN.md  PUBLIC_BETA_RELEASE_GUIDE.md  README.md  REPL_ENHANCEMENT_PLAN.md  ROADMAP.md  STL_TEST_REPORT.md  STL_USER_GUIDE.md  Skip to content.txt  TEMPLATE_GUIDE.md  TEMPLATE_IMPLEMENTATION_GUIDE.md  VERSION_ROADMAP.md  VSCODE_EXTENSION_PLAN.md  debug_parser.py  demo_mandatory_params.py  diagnose_nova.py  fix_analyzer.py  fix_param_type_check.py  fix_tests.py  hello.nova  patch_analyzer.ps1  patch_analyzer.py  patch_analyzer_v2.py  patch_analyzer_v3.py  patch_analyzer_v4.py  patch_call_expression.py  public_beta_commands.ps1  pyproject.toml  (+300 more)
.nova_cache/: compile_cache.pkl
.trae/documents/: plan_20260214_094325.md  实现Nova语言0.8.0版本.md
.trae/rules/: project_rules.md
docs/: 0.2.0特性说明.md
examples/: access_modifiers.nova  generic_programming.nova  math_library.nova  stl_test.nova  string_processing.nova  task_manager.nova  trait_system.nova
help/: index.html
help/en/: index.html
help/en/reference/: index.html
help/en/tutorial/: classes.html  collections.html  error-handling.html  file-io.html  generics.html  hello-world.html  installation.html  introduction.html  modules.html  variables.html
help/examples/: index.html
help/faq/: index.html
help/fr/: index.html
help/fr/tutorial/: index.html
help/jp/: index.html
help/jp/tutorial/: index.html
help/tutorial/: control-flow.html  functions.html  index.html  operators.html  traits.html
help/zh/: index.html
help/zh/examples/: access-modifiers.html  generic-programming.html  index.html  math-library.html  stl-test.html  string-processing.html  task-manager.html  trait-system.html
help/zh/faq/: index.html
help/zh/reference/: index.html
help/zh/tutorial/: classes.html  collections.html  control-flow.html  error-handling.html  file-io.html  functions.html  generics.html  hello-world.html  index.html  installation.html  introduction.html  modules.html  operators.html  traits.html  variables.html
my_test/: test_add.nova
nova_backup/: debugger.py  repl.py  version.py
src/nova/: __main__.py  repl.py  version.py
src/nova/cli/: main.py
src/nova/compiler/: features.py  llvm_compiler.py
src/nova/compiler/lexer/: scanner.py
src/nova/compiler/parser/: parser.py
src/nova/compiler/semantic/: types.py  (+2 more)
src/nova/stdlib/: typing.py
src/nova/vm/: gc.py  instructions.py  machine.py
tests/: __init__.py  test_extended_stdlib.py  test_features.py  test_generic_functions.py  test_generic_structs.py  test_gui.py  test_lexer.py  test_math_module.py  test_parser.py  test_semantic.py  test_stdlib.py  test_string_module.py  test_traits.py  test_vm.py
tools/tutorials/: basic_syntax.py  generic_programming.py  stdlib_usage.py  trait_system.py
versions/0.1.0/: version.py
versions/0.10.0/: README.md
versions/0.11.0/: CHANGELOG.md  README.md  version.py
versions/0.12.0/: CHANGELOG.md  README.md  version.py
versions/0.14.0/: CHANGELOG.md  README.md  version.py
versions/0.15.0/: CHANGELOG.md  README.md  version.py
versions/0.15.1/: CHANGELOG.md  README.md
versions/0.16.0/: CHANGELOG.md  README.md  version.py
versions/0.3.0/: CHANGELOG.md  README.md  version.py
versions/0.4.0/: CHANGELOG.md  README.md  version.py
versions/0.4.1/: CHANGELOG.md
versions/0.5.0/: CHANGELOG.md  README.md  version.py
versions/0.5.0/src/: PKG-INFO  SOURCES.txt  entry_points.txt  repl.py  requires.txt  scanner.py  types.py
versions/0.5.1/: CHANGELOG.md  README.md  version.py
versions/0.6.0/: CHANGELOG.md  README.md  version.py
versions/0.8.0/: CHANGELOG.md  version.py
versions/0.9.0/: CHANGELOG.md  README.md  version.py
versions/0.9.2/: CHANGELOG.md  README.md  version.py
versions/0.9.3/: CHANGELOG.md  README.md  version.py
versions/0.9.4/: CHANGELOG.md
versions/1.0.0/: CHANGELOG.md  README.md
vscode-extension/nova-language/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/nova-language/nova-ide/: requirements.txt  setup.py
vscode-extension/nova-language/snippets/: nova.json
vscode-extension/nova-language/src/: extension.ts
vscode-extension/nova-language/syntaxes/: nova.tmLanguage.json
(+234 files in other folders)
