[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-language"
version = "0.16.0"
description = "Nova编程语言"
readme = "NOVA_LANGUAGE_MANUAL.md"
license = {text = "MIT"}
authors = [
    {name = "Nova Team", email = "nova@example.com"}
]
maintainers = [
    {name = "Nova Team", email = "nova@example.com"}
]
keywords = ["programming-language", "compiler", "interpreter", "nova"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/nova-language/nova"
Documentation = "https://github.com/nova-language/nova/blob/main/NOVA_LANGUAGE_MANUAL.md"
Repository = "https://github.com/nova-language/nova"
Issues = "https://github.com/nova-language/nova/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
repl = [
    "prompt-toolkit>=3.0.0",
]
profiler = [
    "psutil>=5.9.0",
]

[project.scripts]
nova = "nova.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nova = ["*.md"]

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
